<?xml version="1.0" encoding="utf-8" ?> 

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
	<LinearLayout
   		android:orientation="vertical" android:layout_width="fill_parent"
   		android:layout_height="fill_parent">
   		
    	<TableLayout
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:padding="2dip"
    		android:gravity="center">
    		<TableRow>
    	
		    	<TextView android:layout_width="wrap_content"
		    	android:id="@+id/server_address_text"
		    	android:gravity="center_vertical"
			    android:layout_height="fill_parent" 
			    android:padding="2dip"
			    android:text="@string/server_address_english" />
      			<AutoCompleteTextView android:id="@+id/server_address" 
		        android:layout_width="fill_parent"
     			android:layout_height="wrap_content" 
     			android:completionThreshold="1"
				android:layout_weight="1" android:text="@string/default_server_address"/>
			</TableRow>
 
     		<TableRow>
		
		    <TextView android:layout_width="wrap_content"
		      android:id="@+id/game_id_text" 
		    	android:gravity="center_vertical"
			    android:layout_height="fill_parent" 
			    android:padding="2dip"
			    android:text="@string/game_id_english" />
      		<EditText android:id="@+id/game_id" 
		        android:layout_width="fill_parent"
     			android:layout_height="wrap_content" 
				android:layout_weight="1" android:text="defaultGameId"/>
		</TableRow>
		</TableLayout> 
		
		<RadioGroup
			android:id="@+id/start_game_choice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/create_game"
            android:orientation="horizontal">
    
            <RadioButton android:id="@+id/create_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_game_english" />
    
            <RadioButton android:id="@+id/join_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_game_english" />
        </RadioGroup>   	    
        
        <TableLayout android:id="@+id/game_options"
        	android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="2dip">
    		
    		<TableRow>
		
		    	<TextView android:layout_width="wrap_content"
		    	    android:id="@+id/preferred_player_id_text" 
		    		android:gravity="center_vertical"
			    	android:layout_height="wrap_content"
			    	android:layout_gravity="center_vertical" 
			    	android:padding="2dip"
			    	android:text="@string/preferred_player_id_english" />
			    <Spinner android:id="@+id/preferred_player_id"
                    android:layout_width="160dip"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"/>
			</TableRow>
		    
 	    	<TableRow>
		
		    	<TextView android:layout_width="wrap_content"
		    	    android:id="@+id/num_players_text" 
		    		android:gravity="center_vertical"
			    	android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" 
                    android:padding="2dip"
			    	android:text="@string/num_players_english" />
			    <Spinner android:id="@+id/num_players"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"/>
			</TableRow>
		
			<TableRow>
		
		    	<TextView android:layout_width="wrap_content"
		    	    android:id="@+id/num_decks_text" 
			    	android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
			    	android:gravity="center_vertical"
			    	android:padding="2dip"
			    	android:text="@string/num_decks_english" />
                <Spinner android:id="@+id/num_decks"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"/>
			</TableRow>
			
			<TableRow>
		
		      <TextView android:layout_width="wrap_content"
		          android:id="@+id/num_ais_text"
		          android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical" 
                  android:gravity="center_vertical"
		          android:padding="2dip" android:text="@string/num_ais_english"/>
		      <LinearLayout android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:orientation="horizontal">
		      <Spinner android:id="@+id/num_ais"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"/>
               <EditText android:id="@+id/num_ais_fixed"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
               />
               </LinearLayout>
			</TableRow>
		</TableLayout>
 
    <LinearLayout
        android:orientation="horizontal" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		<Button android:id="@+id/start_game_button" android:text="@string/start_game_english"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<Button android:id="@+id/game_instruction_button" android:text="@string/game_instruction_english"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<Button android:id="@+id/game_option_button" android:text="@string/game_option"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
       
	</LinearLayout>

	</LinearLayout>
</ScrollView>